Updated README.md with javafx steps and database login